// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hdi tests hdi list and longlist 5`] = `
"
=== container instances ===

[
  {
    "id": "cd0dd852-4045-4bff-82b5-909d0948c6fb",
    "ready": true,
    "name": "z6w9myXbyLg9u0kguYzwZBVvp4N/yd/LimaWEwuLdEU=",
    "service_plan_id": "1b702f36-bd66-4fad-b4d8-75cf0a0b8347",
    "platform_id": "service-manager",
    "context": {
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "z6w9myXbyLg9u0kguYzwZBVvp4N/yd/LimaWEwuLdEU=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec"
    },
    "usable": true,
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "protected": null,
    "created_at": "2022-04-26T18:05:44.931344Z",
    "updated_at": "2024-02-07T11:36:53.771381Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "5ecc7413-2b7e-414a-9496-ad4a61f6cccf"
      ]
    }
  },
  {
    "id": "0a017fb4-f4ae-408a-9d79-6e866e51fb00",
    "ready": true,
    "name": "kPnZctLNPKAsZO254v9JR6KqYizHke1KuK/7O/QpMv4=",
    "service_plan_id": "1b702f36-bd66-4fad-b4d8-75cf0a0b8347",
    "platform_id": "service-manager",
    "context": {
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "kPnZctLNPKAsZO254v9JR6KqYizHke1KuK/7O/QpMv4=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec"
    },
    "usable": true,
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "protected": null,
    "created_at": "2022-04-28T07:57:50.543912Z",
    "updated_at": "2024-02-07T11:36:53.760275Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "6917dfd6-7590-4033-af2a-140b75263b0d"
      ]
    }
  },
  {
    "id": "42ff43bd-14a7-41f7-b903-259235c1abcb",
    "ready": true,
    "name": "bhKkLJZVBoHWDihD4eO2zjECv8cmQxMVGIut0eovg1I=",
    "service_plan_id": "1b702f36-bd66-4fad-b4d8-75cf0a0b8347",
    "platform_id": "service-manager",
    "context": {
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "bhKkLJZVBoHWDihD4eO2zjECv8cmQxMVGIut0eovg1I=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec"
    },
    "usable": true,
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "protected": null,
    "created_at": "2022-09-05T12:11:41.981588Z",
    "updated_at": "2024-02-07T11:36:53.73628Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "cb9158ce-f8fd-441b-b443-17219e8f79fa"
      ]
    }
  },
  {
    "id": "6e96ba0f-d345-43ef-a5be-b7d0de85d58b",
    "ready": true,
    "name": "xZwc6E4dZPMH4dD4GtngBlcKE9coxFVoRv3UtlSFsbA=",
    "service_plan_id": "1b702f36-bd66-4fad-b4d8-75cf0a0b8347",
    "platform_id": "service-manager",
    "context": {
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "xZwc6E4dZPMH4dD4GtngBlcKE9coxFVoRv3UtlSFsbA=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec"
    },
    "usable": true,
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "protected": null,
    "created_at": "2023-01-30T20:19:09.136437Z",
    "updated_at": "2024-02-07T11:36:53.768028Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "t0"
      ]
    }
  },
  {
    "id": "57175b0d-f1cb-447e-a720-bbd1199993e4",
    "ready": true,
    "name": "0ZnPvjrwG4tjwx6S1BdUsYYXG1BtbaDH5rTsh5oT7ss=",
    "service_plan_id": "1b702f36-bd66-4fad-b4d8-75cf0a0b8347",
    "platform_id": "service-manager",
    "context": {
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "0ZnPvjrwG4tjwx6S1BdUsYYXG1BtbaDH5rTsh5oT7ss=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec"
    },
    "usable": true,
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "protected": null,
    "created_at": "2023-06-21T08:34:19.468673Z",
    "updated_at": "2024-02-07T11:36:53.722712Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "dde70ec5-983d-4848-b50c-fb2cdac7d359"
      ]
    }
  },
  {
    "id": "c1a94550-08a6-4771-ae15-cc7ae0f0cf82",
    "ready": true,
    "name": "A2jQyKhoVof27IY2/eT+hWaX70kWKJ1z7Qbu1RJ9TCI=",
    "service_plan_id": "1b702f36-bd66-4fad-b4d8-75cf0a0b8347",
    "platform_id": "service-manager",
    "context": {
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "A2jQyKhoVof27IY2/eT+hWaX70kWKJ1z7Qbu1RJ9TCI=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec"
    },
    "usable": true,
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "protected": null,
    "created_at": "2023-08-08T14:41:54.810199Z",
    "updated_at": "2024-02-07T11:36:53.764098Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "848a0f14-792d-4bd2-821c-7c6280780ca3"
      ]
    }
  },
  {
    "id": "8a633bdf-bd76-43ee-8414-74f8095a05c3",
    "ready": true,
    "name": "ZQD0tNvrnCECzRpz4jwS6Hbi3BV2DctZZrVo31ZODqU=",
    "service_plan_id": "1b702f36-bd66-4fad-b4d8-75cf0a0b8347",
    "platform_id": "service-manager",
    "context": {
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "ZQD0tNvrnCECzRpz4jwS6Hbi3BV2DctZZrVo31ZODqU=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec"
    },
    "usable": true,
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "protected": null,
    "created_at": "2023-09-05T14:19:48.964271Z",
    "updated_at": "2024-02-07T11:36:53.779523Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "4c0909b1-a84e-4763-a26e-532fdb9e40fa"
      ]
    }
  },
  {
    "id": "03500242-e7a0-4799-8432-cfd72472d0d8",
    "ready": true,
    "name": "ogHOP5J8A+k9MfUI8rAfzOGjVy4Wpz1U5cH4aDMH/5Q=",
    "service_plan_id": "1b702f36-bd66-4fad-b4d8-75cf0a0b8347",
    "platform_id": "service-manager",
    "context": {
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "ogHOP5J8A+k9MfUI8rAfzOGjVy4Wpz1U5cH4aDMH/5Q=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec"
    },
    "usable": true,
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "protected": null,
    "created_at": "2024-01-05T07:51:54.425898Z",
    "updated_at": "2024-02-07T11:36:53.737406Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "288393a7-972c-4fa8-acfd-12299c4db374"
      ]
    }
  }
]

=== container bindings ===

[
  {
    "id": "b2270d69-ff4e-4155-94b5-daabd031e502",
    "ready": true,
    "name": "dKK74DM2s5PT5TwVxzdCaICdxj8SgWZv",
    "service_instance_id": "0a017fb4-f4ae-408a-9d79-6e866e51fb00",
    "context": {
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "kPnZctLNPKAsZO254v9JR6KqYizHke1KuK/7O/QpMv4=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "0a017fb4-f4ae-408a-9d79-6e866e51fb00",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
    },
    "credentials": {
      "certificate": "service-manager-items-0-credentials-certificate",
      "database_id": "fa8a6cbe-1cdc-4dea-84cf-877c09b0f651",
      "driver": "com.sap.db.jdbc.Driver",
      "hdi_password": "service-manager-items-0-credentials-hdi_password",
      "hdi_user": "service-manager-items-0-credentials-hdi_user",
      "host": "service-manager-items-0-credentials-host",
      "password": "service-manager-items-0-credentials-password",
      "port": "443",
      "schema": "service-manager-items-0-credentials-schema",
      "tenantId": "0a017fb4-f4ae-408a-9d79-6e866e51fb00",
      "url": "jdbc:sap://fa8a6cbe-1cdc-4dea-84cf-877c09b0f651.hna0.canary-eu10.hanacloud.ondemand.com:443",
      "user": "service-manager-items-0-credentials-user"
    },
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "created_at": "2024-02-07T11:37:49.679269Z",
    "updated_at": "2024-02-07T11:37:59.836995Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "managing_client_lib": [
        "instance-manager-client-lib"
      ],
      "service_plan_id": [
        "1b702f36-bd66-4fad-b4d8-75cf0a0b8347"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "6917dfd6-7590-4033-af2a-140b75263b0d"
      ]
    }
  },
  {
    "id": "6bbab721-c59b-4883-8b4b-324a9045ac96",
    "ready": true,
    "name": "JYIBPR5ZIIr3xIDN9r0pbuQh36mJ32Hk",
    "service_instance_id": "c1a94550-08a6-4771-ae15-cc7ae0f0cf82",
    "context": {
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "A2jQyKhoVof27IY2/eT+hWaX70kWKJ1z7Qbu1RJ9TCI=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "c1a94550-08a6-4771-ae15-cc7ae0f0cf82",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
    },
    "credentials": {
      "certificate": "service-manager-items-1-credentials-certificate",
      "database_id": "fa8a6cbe-1cdc-4dea-84cf-877c09b0f651",
      "driver": "com.sap.db.jdbc.Driver",
      "hdi_password": "service-manager-items-1-credentials-hdi_password",
      "hdi_user": "service-manager-items-1-credentials-hdi_user",
      "host": "service-manager-items-1-credentials-host",
      "password": "service-manager-items-1-credentials-password",
      "port": "443",
      "schema": "service-manager-items-1-credentials-schema",
      "tenantId": "c1a94550-08a6-4771-ae15-cc7ae0f0cf82",
      "url": "jdbc:sap://fa8a6cbe-1cdc-4dea-84cf-877c09b0f651.hna0.canary-eu10.hanacloud.ondemand.com:443",
      "user": "service-manager-items-1-credentials-user"
    },
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "created_at": "2024-02-07T11:37:49.682048Z",
    "updated_at": "2024-02-07T11:37:59.825433Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "managing_client_lib": [
        "instance-manager-client-lib"
      ],
      "service_plan_id": [
        "1b702f36-bd66-4fad-b4d8-75cf0a0b8347"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "848a0f14-792d-4bd2-821c-7c6280780ca3"
      ]
    }
  },
  {
    "id": "8e624fa7-f83e-46f8-8de9-99ad564d6e00",
    "ready": true,
    "name": "YQF0SlPIsU1tFA9SfVQUEnuV8JCL1W49",
    "service_instance_id": "57175b0d-f1cb-447e-a720-bbd1199993e4",
    "context": {
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "0ZnPvjrwG4tjwx6S1BdUsYYXG1BtbaDH5rTsh5oT7ss=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "57175b0d-f1cb-447e-a720-bbd1199993e4",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
    },
    "credentials": {
      "certificate": "service-manager-items-2-credentials-certificate",
      "database_id": "fa8a6cbe-1cdc-4dea-84cf-877c09b0f651",
      "driver": "com.sap.db.jdbc.Driver",
      "hdi_password": "service-manager-items-2-credentials-hdi_password",
      "hdi_user": "service-manager-items-2-credentials-hdi_user",
      "host": "service-manager-items-2-credentials-host",
      "password": "service-manager-items-2-credentials-password",
      "port": "443",
      "schema": "service-manager-items-2-credentials-schema",
      "tenantId": "57175b0d-f1cb-447e-a720-bbd1199993e4",
      "url": "jdbc:sap://fa8a6cbe-1cdc-4dea-84cf-877c09b0f651.hna0.canary-eu10.hanacloud.ondemand.com:443",
      "user": "service-manager-items-2-credentials-user"
    },
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "created_at": "2024-02-07T11:37:49.692385Z",
    "updated_at": "2024-02-07T11:37:59.848913Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "managing_client_lib": [
        "instance-manager-client-lib"
      ],
      "service_plan_id": [
        "1b702f36-bd66-4fad-b4d8-75cf0a0b8347"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "dde70ec5-983d-4848-b50c-fb2cdac7d359"
      ]
    }
  },
  {
    "id": "c10f2267-a352-472a-87e8-4ecd0beea625",
    "ready": true,
    "name": "LXf3wr84EVmNlGa6BHdCUBR7JmbIiNaX",
    "service_instance_id": "03500242-e7a0-4799-8432-cfd72472d0d8",
    "context": {
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "ogHOP5J8A+k9MfUI8rAfzOGjVy4Wpz1U5cH4aDMH/5Q=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "03500242-e7a0-4799-8432-cfd72472d0d8",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
    },
    "credentials": {
      "certificate": "service-manager-items-3-credentials-certificate",
      "database_id": "fa8a6cbe-1cdc-4dea-84cf-877c09b0f651",
      "driver": "com.sap.db.jdbc.Driver",
      "hdi_password": "service-manager-items-3-credentials-hdi_password",
      "hdi_user": "service-manager-items-3-credentials-hdi_user",
      "host": "service-manager-items-3-credentials-host",
      "password": "service-manager-items-3-credentials-password",
      "port": "443",
      "schema": "service-manager-items-3-credentials-schema",
      "tenantId": "03500242-e7a0-4799-8432-cfd72472d0d8",
      "url": "jdbc:sap://fa8a6cbe-1cdc-4dea-84cf-877c09b0f651.hna0.canary-eu10.hanacloud.ondemand.com:443",
      "user": "service-manager-items-3-credentials-user"
    },
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "created_at": "2024-02-07T11:37:49.696038Z",
    "updated_at": "2024-02-07T11:37:59.850912Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "managing_client_lib": [
        "instance-manager-client-lib"
      ],
      "service_plan_id": [
        "1b702f36-bd66-4fad-b4d8-75cf0a0b8347"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "288393a7-972c-4fa8-acfd-12299c4db374"
      ]
    }
  },
  {
    "id": "50a07db9-da3b-4ec5-8545-521c06bf244c",
    "ready": true,
    "name": "m15mSlbFnh88ALqEYgxx9QO07MNnXHCP",
    "service_instance_id": "42ff43bd-14a7-41f7-b903-259235c1abcb",
    "context": {
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "bhKkLJZVBoHWDihD4eO2zjECv8cmQxMVGIut0eovg1I=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "42ff43bd-14a7-41f7-b903-259235c1abcb",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
    },
    "credentials": {
      "certificate": "service-manager-items-4-credentials-certificate",
      "database_id": "fa8a6cbe-1cdc-4dea-84cf-877c09b0f651",
      "driver": "com.sap.db.jdbc.Driver",
      "hdi_password": "service-manager-items-4-credentials-hdi_password",
      "hdi_user": "service-manager-items-4-credentials-hdi_user",
      "host": "service-manager-items-4-credentials-host",
      "password": "service-manager-items-4-credentials-password",
      "port": "443",
      "schema": "service-manager-items-4-credentials-schema",
      "tenantId": "42ff43bd-14a7-41f7-b903-259235c1abcb",
      "url": "jdbc:sap://fa8a6cbe-1cdc-4dea-84cf-877c09b0f651.hna0.canary-eu10.hanacloud.ondemand.com:443",
      "user": "service-manager-items-4-credentials-user"
    },
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "created_at": "2024-02-07T11:37:49.697564Z",
    "updated_at": "2024-02-07T11:37:59.870886Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "managing_client_lib": [
        "instance-manager-client-lib"
      ],
      "service_plan_id": [
        "1b702f36-bd66-4fad-b4d8-75cf0a0b8347"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "cb9158ce-f8fd-441b-b443-17219e8f79fa"
      ]
    }
  },
  {
    "id": "39d0c7d7-b444-4f59-899c-425533bd91bb",
    "ready": true,
    "name": "NvK81I0qWul7B4dk3kSPRiHJeiNSAg8e",
    "service_instance_id": "8a633bdf-bd76-43ee-8414-74f8095a05c3",
    "context": {
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "ZQD0tNvrnCECzRpz4jwS6Hbi3BV2DctZZrVo31ZODqU=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "8a633bdf-bd76-43ee-8414-74f8095a05c3",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
    },
    "credentials": {
      "certificate": "service-manager-items-5-credentials-certificate",
      "database_id": "fa8a6cbe-1cdc-4dea-84cf-877c09b0f651",
      "driver": "com.sap.db.jdbc.Driver",
      "hdi_password": "service-manager-items-5-credentials-hdi_password",
      "hdi_user": "service-manager-items-5-credentials-hdi_user",
      "host": "service-manager-items-5-credentials-host",
      "password": "service-manager-items-5-credentials-password",
      "port": "443",
      "schema": "service-manager-items-5-credentials-schema",
      "tenantId": "8a633bdf-bd76-43ee-8414-74f8095a05c3",
      "url": "jdbc:sap://fa8a6cbe-1cdc-4dea-84cf-877c09b0f651.hna0.canary-eu10.hanacloud.ondemand.com:443",
      "user": "service-manager-items-5-credentials-user"
    },
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "created_at": "2024-02-07T11:37:49.694232Z",
    "updated_at": "2024-02-07T11:37:59.874867Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "managing_client_lib": [
        "instance-manager-client-lib"
      ],
      "service_plan_id": [
        "1b702f36-bd66-4fad-b4d8-75cf0a0b8347"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "4c0909b1-a84e-4763-a26e-532fdb9e40fa"
      ]
    }
  },
  {
    "id": "cd46a818-714b-4f58-8517-9a5265a7a7f7",
    "ready": true,
    "name": "ibnMo0o4yIWSiAupgtAzyaxq5WmIrgCx",
    "service_instance_id": "6e96ba0f-d345-43ef-a5be-b7d0de85d58b",
    "context": {
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "xZwc6E4dZPMH4dD4GtngBlcKE9coxFVoRv3UtlSFsbA=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "6e96ba0f-d345-43ef-a5be-b7d0de85d58b",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
    },
    "credentials": {
      "certificate": "service-manager-items-6-credentials-certificate",
      "database_id": "fa8a6cbe-1cdc-4dea-84cf-877c09b0f651",
      "driver": "com.sap.db.jdbc.Driver",
      "hdi_password": "service-manager-items-6-credentials-hdi_password",
      "hdi_user": "service-manager-items-6-credentials-hdi_user",
      "host": "service-manager-items-6-credentials-host",
      "password": "service-manager-items-6-credentials-password",
      "port": "443",
      "schema": "service-manager-items-6-credentials-schema",
      "tenantId": "6e96ba0f-d345-43ef-a5be-b7d0de85d58b",
      "url": "jdbc:sap://fa8a6cbe-1cdc-4dea-84cf-877c09b0f651.hna0.canary-eu10.hanacloud.ondemand.com:443",
      "user": "service-manager-items-6-credentials-user"
    },
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "created_at": "2024-02-07T11:37:49.709555Z",
    "updated_at": "2024-02-07T11:37:59.882871Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "managing_client_lib": [
        "instance-manager-client-lib"
      ],
      "service_plan_id": [
        "1b702f36-bd66-4fad-b4d8-75cf0a0b8347"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "t0"
      ]
    }
  },
  {
    "id": "6c8c6ec8-669d-4353-b991-b191363ec918",
    "ready": true,
    "name": "XMn5m1NhBv0mGCI0ulkZle7qkRW6fMQa",
    "service_instance_id": "cd0dd852-4045-4bff-82b5-909d0948c6fb",
    "context": {
      "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
      "crm_customer_id": "",
      "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "instance_annotations": {},
      "instance_name": "z6w9myXbyLg9u0kguYzwZBVvp4N/yd/LimaWEwuLdEU=",
      "landscape_label": "cf-eu10-canary",
      "license_type": "SAPDEV",
      "organization_annotations": {},
      "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
      "organization_name": "skyfin",
      "origin": "cloudfoundry",
      "platform": "sapcp",
      "region": "cf-eu10-canary",
      "service_instance_id": "cd0dd852-4045-4bff-82b5-909d0948c6fb",
      "space_annotations": {},
      "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
      "space_name": "dev",
      "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
      "subdomain": "skyfin",
      "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
    },
    "credentials": {
      "certificate": "service-manager-items-7-credentials-certificate",
      "database_id": "71836508-e02b-4a5b-88a2-4dd482f6de70",
      "driver": "com.sap.db.jdbc.Driver",
      "hdi_password": "service-manager-items-7-credentials-hdi_password",
      "hdi_user": "service-manager-items-7-credentials-hdi_user",
      "host": "service-manager-items-7-credentials-host",
      "password": "service-manager-items-7-credentials-password",
      "port": "443",
      "schema": "service-manager-items-7-credentials-schema",
      "tenantId": "cd0dd852-4045-4bff-82b5-909d0948c6fb",
      "url": "jdbc:sap://71836508-e02b-4a5b-88a2-4dd482f6de70.hna0.canary-eu10.hanacloud.ondemand.com:443",
      "user": "service-manager-items-7-credentials-user"
    },
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "created_at": "2024-02-15T09:29:17.637731Z",
    "updated_at": "2024-02-15T09:29:27.847679Z",
    "labels": {
      "container_id": [
        "51ddd18b-5a78-418e-8f41-9a4c518650ec"
      ],
      "managing_client_lib": [
        "instance-manager-client-lib"
      ],
      "service_plan_id": [
        "1b702f36-bd66-4fad-b4d8-75cf0a0b8347"
      ],
      "subaccount_id": [
        "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
      ],
      "tenant_id": [
        "5ecc7413-2b7e-414a-9496-ad4a61f6cccf"
      ]
    }
  }
]
"
`;

exports[`hdi tests hdi list and longlist filtered 5`] = `
"
=== container instance ===

{
  "id": "cd0dd852-4045-4bff-82b5-909d0948c6fb",
  "ready": true,
  "name": "z6w9myXbyLg9u0kguYzwZBVvp4N/yd/LimaWEwuLdEU=",
  "service_plan_id": "1b702f36-bd66-4fad-b4d8-75cf0a0b8347",
  "platform_id": "service-manager",
  "context": {
    "crm_customer_id": "",
    "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
    "instance_annotations": {},
    "instance_name": "z6w9myXbyLg9u0kguYzwZBVvp4N/yd/LimaWEwuLdEU=",
    "landscape_label": "cf-eu10-canary",
    "license_type": "SAPDEV",
    "organization_annotations": {},
    "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
    "organization_name": "skyfin",
    "origin": "cloudfoundry",
    "platform": "sapcp",
    "region": "cf-eu10-canary",
    "service_instance_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
    "space_annotations": {},
    "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
    "space_name": "dev",
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "subdomain": "skyfin",
    "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec"
  },
  "usable": true,
  "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
  "protected": null,
  "created_at": "2022-04-26T18:05:44.931344Z",
  "updated_at": "2024-02-07T11:36:53.771381Z",
  "labels": {
    "container_id": [
      "51ddd18b-5a78-418e-8f41-9a4c518650ec"
    ],
    "subaccount_id": [
      "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
    ],
    "tenant_id": [
      "5ecc7413-2b7e-414a-9496-ad4a61f6cccf"
    ]
  }
}

=== container binding ===

{
  "id": "6c8c6ec8-669d-4353-b991-b191363ec918",
  "ready": true,
  "name": "XMn5m1NhBv0mGCI0ulkZle7qkRW6fMQa",
  "service_instance_id": "cd0dd852-4045-4bff-82b5-909d0948c6fb",
  "context": {
    "container_id": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
    "crm_customer_id": "",
    "global_account_id": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
    "instance_annotations": {},
    "instance_name": "z6w9myXbyLg9u0kguYzwZBVvp4N/yd/LimaWEwuLdEU=",
    "landscape_label": "cf-eu10-canary",
    "license_type": "SAPDEV",
    "organization_annotations": {},
    "organization_guid": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
    "organization_name": "skyfin",
    "origin": "cloudfoundry",
    "platform": "sapcp",
    "region": "cf-eu10-canary",
    "service_instance_id": "cd0dd852-4045-4bff-82b5-909d0948c6fb",
    "space_annotations": {},
    "space_guid": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
    "space_name": "dev",
    "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
    "subdomain": "skyfin",
    "zone_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
  },
  "credentials": {
    "certificate": "service-manager-items-0-credentials-certificate",
    "database_id": "71836508-e02b-4a5b-88a2-4dd482f6de70",
    "driver": "com.sap.db.jdbc.Driver",
    "hdi_password": "service-manager-items-0-credentials-hdi_password",
    "hdi_user": "service-manager-items-0-credentials-hdi_user",
    "host": "service-manager-items-0-credentials-host",
    "password": "service-manager-items-0-credentials-password",
    "port": "443",
    "schema": "service-manager-items-0-credentials-schema",
    "tenantId": "cd0dd852-4045-4bff-82b5-909d0948c6fb",
    "url": "jdbc:sap://71836508-e02b-4a5b-88a2-4dd482f6de70.hna0.canary-eu10.hanacloud.ondemand.com:443",
    "user": "service-manager-items-0-credentials-user"
  },
  "subaccount_id": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
  "created_at": "2024-02-15T09:29:17.637731Z",
  "updated_at": "2024-02-15T09:29:27.847679Z",
  "labels": {
    "container_id": [
      "51ddd18b-5a78-418e-8f41-9a4c518650ec"
    ],
    "managing_client_lib": [
      "instance-manager-client-lib"
    ],
    "service_plan_id": [
      "1b702f36-bd66-4fad-b4d8-75cf0a0b8347"
    ],
    "subaccount_id": [
      "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
    ],
    "tenant_id": [
      "5ecc7413-2b7e-414a-9496-ad4a61f6cccf"
    ]
  }
}
"
`;
